# ai-backend

./: .gitignore  Dockerfile  README.md  ad  ad.pub  frontend.py  pyproject.toml  requirements.txt  start.sh  vercel.json  zus_coffee.db
agents/: agent.py  chat.py  llm.py  tools.py
api/: README.md  frontend.py  index.py  requirements.txt
chroma_db/: chroma.sqlite3
faisss_index/: chroma.sqlite3
infra/: models.py
routers/: db.py  pinecone.py  sql.py  zus_locations.csv
src/: main.py  requirements.txt  vercel.json
src/agents/: agent.py  ai_agent.py  chat.py  llm.py  tools.py
src/infra/: models.py
src/prompt/: prompt.py  system_prompt.md
